fix(hero): prevent image cropping on resize

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -16,8 +16,7 @@
 
 .hero__image img {
     width: 100%;
-    height: 60vh;
-    object-fit: cover;
+    height: auto;
     display: block;
 }
 
